data/derived/comb/progs/unify/prog4330.ml.out
Characters 103-107:
  | VarY              -> "%s" e
                         ^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
